test/test-files/analyzer/builtins/error-printf-type-incompatibility/exception.out
Semantic error in : ./test-files/analyzer/builtins/error-printf-type-incompatibility/source.spice:6:36:
Types of printf call not matching: Template string expects char, but got string

s is a string: %c", "test");
                    ^^^^^^